Tue May 05 12:52:17 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_compact.cc: Make sure we open all the tables of
	  a database at the same revision when compacting.  (Fixes #649)

Tue May 05 12:48:01 GMT 2015  Olly Betts <olly@survex.com>

	* examples/xapian-metadata.cc: Add 'list' subcommand to list all the
	  metadata keys.

Tue May 05 12:07:10 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Doxygen comment wording tweaks.

Tue May 05 12:04:02 GMT 2015  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h: Doxygen comment formatting tweaks.

Tue May 05 11:48:57 GMT 2015  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Extend the
	  set of characters allowed in the start of a range to be anything
	  except for '(' and characters <= ' '.  This better matches what's
	  accepted for a range end (anything except for ')' and characters <=
	  ' ').  Reported by Jani Nikula.

Tue May 05 11:46:57 GMT 2015  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* bin/xapian-check.cc: Don't hard-code string length as number.

Wed Mar 04 00:53:14 GMT 2015  Olly Betts <olly@survex.com>

	* AUTHORS: Update for 1.2.20.

Wed Mar 04 00:27:39 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.20.

Tue Mar 03 11:35:42 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Feb 13 10:47:52 GMT 2015  Olly Betts <olly@survex.com>

	* backends/brass/brass_table.cc,backends/flint/flint_table.cc:
	  mid_point() should never fail to find a split point, but just in
	  case it does, return a usable answer.

Wed Feb 11 22:44:35 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_table.cc: mid_point() should never fail to find
	  a split point, but just in case it does, return a usable answer.

Sun Jan 25 23:48:34 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Check for declaration of fdatasync() first, as OS X